--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]>=0.27.0
 supabase>=2.0.0
 python-dotenv>=1.0.0
 python-multipart>=0.0.6
-pydantic>=2.0.0
+pydantic[email]>=2.0.0
 pydantic-settings>=2.0.0
 httpx>=0.24.0
+email-validator>=2.0.0
